--- a/sass/components/_logo__header.scss
+++ b/sass/components/_logo__header.scss
@@ -12,6 +12,6 @@ padding: 24px 0px 25px;
 
 /* ============ LOGO COLOR IN HEADER =========== */
 
-.logo-span {
+.logo__span {
     color: var(--black-color);
 }
