--- a/sass/components/_newsletter__button.scss
+++ b/sass/components/_newsletter__button.scss
@@ -1,4 +1,4 @@
-.btn-newsletter {
+.newsletter__btn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,7 +17,7 @@
     }
 }
 
-.btn-newsletter-icon {
+.newsletter__icon {
 fill: var(--white-color);
 margin-left: 24px;
 }
