--- a/sass/components/_main__button.scss
+++ b/sass/components/_main__button.scss
@@ -1,4 +1,4 @@
-.main-button  {
+.main__button  {
     display: block;
     width: 200px;
     height: 50px;
@@ -7,17 +7,11 @@
     text-align: center;
     border-style: none;
     border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.06em;
+    background: var(--main-color);
+    color: var(--white-color);
+    cursor: pointer;
 }
-
-
-
-.main-button {
-display: block;
-font-weight: 700;
-font-size: 16px;
-line-height: 1.875;
-letter-spacing: 0.06em;
-background: var(--main-color);
-color: var(--white-color);
-cursor: pointer;
-} 
