--- a/sass/components/_main__text.scss
+++ b/sass/components/_main__text.scss
@@ -1,22 +1,13 @@
-.main-text {
+.main__text {
 display: block;
 text-align: center;
 width: 696px;
 height: 120px;
-}
-
-.main-text {
-    margin-bottom: 30px;
-    font-size: 44px;
-    display: block;
-    align-items: center;
-}
-
-.main-text {
-font-weight: 900;
+margin-bottom: 30px;
 font-size: 44px;
+align-items: center;
+font-weight: 900;
 line-height: 1.363;
-text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: var(--white-color);
