--- a/sass/components/_modal__window.scss
+++ b/sass/components/_modal__window.scss
@@ -39,9 +39,7 @@
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    &:hover { cursor:pointer;
-
-    }
+    &:hover { cursor:pointer;}
 }
 
 .modal__icon {
@@ -51,12 +49,12 @@
 }
 
 
-.modal-registration {
+.modal__registration {
     display: flex;
   flex-direction: column;
 }
 
-.modal-registration-title {
+.modal__registration--title {
     font-weight: 700;
     font-size: 20px;
     line-height: 23px;
@@ -67,7 +65,7 @@
     margin-bottom: 12px;
 }
 
-.modal-registration-input {
+.modal__window {
     margin-right: 40px;
     margin-bottom: 10px;
     margin-left: 40px;
@@ -77,13 +75,13 @@
     color: #757575;
 }
 
-.modal-registration-label {
+.modal__window--label {
     position: relative;
     display: block;
     margin-top: 4px;
 }
 
-.modal-registration-content {
+.modal__window--content {
     width: 100%;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -92,12 +90,12 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     outline: none;
     &:focus {
-        border-color: #2196F3;
-        outline: none;
+    border-color: #2196F3;
+    outline: none;
     }
 }
 
-.modal-registration-icon {
+.modal__window--icon {
     position: absolute;
     top: 50%;
     left: 12px;
@@ -106,7 +104,7 @@
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-registration-comment{
+.modal__window--comment{
     outline: none;
     width: 100%;
     height: 120px;
@@ -117,19 +115,19 @@
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:focus {
-        border-color: #2196F3;
-        outline: none;
+    border-color: #2196F3;
+    outline: none;
     }
 }
 
 
-.modal-registration-form {
+.policy {
     display: flex;
     width: 100%;
     flex-direction: column;
 }
 
-.modal-registration-policy-text {
+.policy__text {
     display:block;
     justify-content: center;
     align-items: center;
@@ -150,16 +148,15 @@
     margin-right: 7px;
     cursor:pointer;
     transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);    
-    }
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);}
 }
 
-.modal-registration-policy-text > a {
+.policy__text > a {
     color: var(--main-color);
     cursor: pointer;
 }
 
-.modal-registration-policy:checked + .modal-registration-policy-text::before {
+.policy__checkbox:checked + .policy__text::before {
     background-color:var(--main-color);
     background-size: contain;
     background-image: url(../Images/check.svg);
@@ -167,7 +164,7 @@
 
 }
 
-.modal-submit-btn {
+.modal__submit--btn {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -183,21 +180,14 @@
     border-radius: 4px;
     border-style: none;
     margin: 30px 164px 40px 164px;
-}
-
-.modal-submit-btn {
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus { box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-     0px 1px 2px rgba(0, 0, 0, 0.08),
-     0px 2px 2px rgba(0, 0, 0, 0.12);
-    cursor: pointer;
-
-    }
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;}
 }
 
-
-.modal-registration-content:focus + .modal-registration-icon {
-    fill: var(--main-color);
-}
+.modal__window--content:focus + .modal__window--icon {
+    fill: var(--main-color)}
