--- a/sass/layout/_what__we__do.scss
+++ b/sass/layout/_what__we__do.scss
@@ -1,36 +1,36 @@
-.what-we-do{
+.what__we__do{
      text-align: center;
 }
-.second-heading {
+.second__heading {
     margin-bottom: 50px;
 }
 
 
-.company-work{
+.company__services{
     display: flex;
     justify-content: space-evenly;
 }
 
-.company-work-list {
+.company__services--list {
     position: relative;
     overflow: hidden;
     list-style-type: none;
     
 }
 
-.company-work-img {
+.company__services--img {
     width: 370px;
     height: 294px;
     
 }
 
-.company-work-layer {
+.company__services--layer {
     position: absolute;
     width: 370px;
     height: 70px;
     text-align: center;
     color: var(--white-color);
     background: rgba(47, 48, 58, 0.8);
-    bottom: 0;
+    bottom: 4px;
     padding: 27px;
 }
